--- a/app.json
+++ b/app.json
@@ -3,12 +3,13 @@
     "name": "SJSC ",
     "slug": "sjsc-app",
     "version": "1.0.0",
+    "sdkVersion": "48.0.0" ,
     "orientation": "portrait",
-    "icon": "https://assets.chorcha.net/rRod1C8Ev7b4im6s8k2nA.png",
+    "icon": "https://assets.chorcha.net/oOGqtqAZZ8bxZ_scKZ13M.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "https://assets.chorcha.net/rRod1C8Ev7b4im6s8k2nA.png",
+      "image": "https://assets.chorcha.net/oOGqtqAZZ8bxZ_scKZ13M.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -16,8 +17,9 @@
       "supportsTablet": true
     },
     "android": {
+      "permissions": ["CAMERA", "READ_EXTERNAL_STORAGE", "WRITE_EXTERNAL_STORAGE"],
       "adaptiveIcon": {
-        "foregroundImage": "https://assets.chorcha.net/rRod1C8Ev7b4im6s8k2nA.png",
+        "foregroundImage": "https://assets.chorcha.net/oOGqtqAZZ8bxZ_scKZ13M.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.evangel_matt.sjscapp"
@@ -30,6 +32,7 @@
         "projectId": "9786032b-12bf-4ebb-ad57-96e34ae96fbb"
       }
     },
+    "plugins": ["expo-image-picker"],
     "jsEngine": "hermes"
   }
 }
