--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "expo": "~52.0.37",
+    "expo-dev-client": "~5.0.15",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-elements": "^3.4.3",
-    "react-native-marquee": "^0.5.0",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-screens": "^4.9.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-screens": "^4.10.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-image-picker": "~16.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
