--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.10.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-image-picker": "~16.0.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
